--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,21 @@
-TODO.
+TODO LUNES
+- 30 min  hacer ruta pra rodri - hacer ruta
+- 20 min  listas landing esta rota. copiar formato ofertas
+- 10 min  hacer push y mandar al pelado y a melena
+- 60 min  sacar header en mobile responsive
+- 120 min poner fitlros en cabeceras par asub agrupaciones
+- 10 min  etalle titulo. agregar Precio unitario final(En bidones 10% caja cerrada)
+
+
+TODO MARTES
+- lanzar ofertas
+
+
 
 LISTAS.HTML
 - detallar aumentos con google sheets
 
 - terminar lubri
 - menu 
-- listas header
 - agrupar por agrpuacion
 - detalle descuentos
-- fomtao ofertas
