cambio en listas de trico

--- a/todo.txt
+++ b/todo.txt
@@ -1,24 +1,21 @@
+TODO JUEVES
+- aumentar pelado y trico
+- hacer lista reventa valvoline2
+- sacar ruedita
+- cambiar formato de index de listas2
+- arreglar tema de adwords
+
+
+
 TODO LUNES
 - 30 min  hacer ruta pra rodri - hacer rutacode 
 - cambiar quiero abirr un luricentro
 
 
-LISTAS
-- hacer resposnive los cuadrados
 
-
-LISTAS ESPECIFICAS
-- poNER EN NEGRITA EL CODIGO Y EL Precio
-- VER COMO EXPONER STOCK
-
-menu en todas las paginas
 
 GOOGLE ADS
-- PONER PAGINA CON PASSWORD PARA ENTRAR A LAS ofertas Y A LAS LISTAS. tu nro de CUIT
-
-QUIERO ABRIR UN LUBRICENTRO
-- Darle un poco de formato al texto
-
+- PONER PAGINA CON PASSWORD PARA ENTRAR A LAS ofertas Y A LAS LISTAS. tu nro de CUI
 
 
 
